mongodb-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: mongodb-service
  namespace: chat-app
spec:
  selector:
    app: mongodb
  ports:
    - port: 27017
      targetPort: 27017
