ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  namespace: chat-app
  annotations:
    nginix.ingress.kubernetes.io/rewrite-target: /
    nginix.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    app.kubernetes.io/name: chatapp-ingress
  spec:
    rules:
    - host: chatapp.com
      http: 
        paths: 
        - pathType: Prefix
          path: "/"
          backend: 
            service:
              name: frontend
              port: 
                number: 80
        - pathType: Prefix
          path: "/api"
          backend: 
            service:
              name: backend
              port: 
                number: 5001
